--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,6 +26,12 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+}
+
+dependencies {
     implementation 'org.openftc:easyopencv:1.5.3'
+}
+
+dependencies {
     implementation 'org.openftc:apriltag:1.1.1'
 }
